# SoftDrone-ROS

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  drone_instructions.md  package.xml  setup.py
gtsam_tracker/: CMakeLists.txt  (+1 more)
softdrone_core/: CMakeLists.txt  drone_instructions.md  package.xml  setup.py
softdrone_core/cfg/: polynomial_planner_node.cfg
softdrone_core/codegen/: polyopt_mx_3d_order9_segs1.c  polyopt_mx_3d_order9_segs2.c
softdrone_core/config/: fake_observation_node.yaml  grasp_state_machine_node.yaml  gripper_node.yaml  gtsam_tracker_node.yaml  keypoint_detector_node.yaml  mocap_wrapper.yaml  optitrack.yaml  polynomial_generator_node.yaml  polynomial_planner_node.yaml  pose_estimator_node.yaml  tracker_node.yaml
softdrone_core/launch/: .master.launch.swo  all_but_perception.launch  all_but_pixhawk.launch  fake_mavros.launch  fake_target_real_perception.launch  full_drone.launch  gain_tuning.launch  gripper.launch  gripper_gpio_test.launch  gripper_test.launch  landing_experiments.launch  manual.launch  master.launch  mocap_translator.launch  no_hardware.launch  pattern_follower.launch  polynomial_planner_node.launch  record_calib.launch  robosoft_experiments.launch  robosoft_experiments_offboard.launch  run_grasp_task.launch  setpoint_cli_node.launch  sim_perception_node.launch  sim_target_node.launch  sim_trajectory_follower.launch  sitl.launch  takeoff_test.launch  test_gtsam.launch  test_perception.launch  trajectory_follower.launch
softdrone_core/launch/legacy/: gripper_test.launch  trajectory_follower.launch
softdrone_core/launch/nodes/: add_mocap_tf_node.launch  d455.launch  dummy_tracker_node.launch  fake_observation_node.launch  fake_target_node.launch  grasp_state_machine_node.launch  gripper.launch  gripper_gpio.launch  gtsam_tracker_node.launch  keypoint_detector_node.launch  mavros_odom_to_tf.launch  mocap_translator.launch  optitrack.launch  plotter_node.launch  polynomial_planner_node.launch  pose_estimator_node.launch  pose_to_odom.launch  ps_to_pwcs_node.launch  reproject_keypoints_node.launch  robot_state_publisher.launch  rollout_node.launch  run_grasp_task.launch  rviz.launch  t265_odom_to_tf.launch  tracker_node.launch  trajectory_to_mocap_frame_node.launch  trajectory_visualizer_node.launch
softdrone_core/launch/tests/: test_trajectory_to_mocap_frame_node.launch
softdrone_core/meshes/: .gitattributes  drone_mesh_v27.stl
softdrone_core/msg/: GraspCommand.msg  GraspTrajectory.msg  LengthInfoMsg.msg  MultiPolynomialTrajectory.msg  PolynomialTrajectory.msg
softdrone_core/rviz/: default.rviz
softdrone_core/scripts/: plot_gripper_traj.py
softdrone_core/src/intel_aero_ros/: __init__.py  grasp_state_machine.py  interp_trajectory_tracker.py  takeoff_state_machine.py  trajectory_tracker.py  waypoint_tracker.py
softdrone_core/src/softdrone_core/: __init__.py  grasp_state_machine.py  interp_trajectory_tracker.py  landing_state_machine.py  polynomial_trajectory_optimizer.py  polynomial_wrappers.py  takeoff_state_machine.py  trajectory_tracker.py  utils.py  waypoint_tracker.py
softdrone_core/src/softdrone_ros/: __init__.py  grasp_state_machine.py  interp_trajectory_tracker.py  landing_state_machine.py  state_machine.py  takeoff_state_machine.py  trajectory_tracker.py  waypoint_tracker.py
softdrone_core/srv/: SendGraspCommand.srv
softdrone_core/systemd/: ros_env.sh  run_roslaunch
softdrone_core/urdf/: drone.urdf.xacro
softdrone_target_pose_estimator/: CMakeLists.txt  README.md  package.xml
softdrone_target_pose_estimator/config/: box.csv  default_params.yaml  dummy_tracker_params.yaml  keypoint_detector_params.yaml  plotter_params.yaml  pose_estimator_params.yaml  reproject_keypoints_params.yaml
softdrone_target_pose_estimator/include/target_pose_estimating/: helper_functions.cpp  helper_functions.hpp  keypoint_detector.cpp  keypoint_detector.hpp  keypoint_detector_ros.cpp  keypoint_detector_ros.hpp  keypoints_3D.cpp  keypoints_3D.hpp  plotter.cpp  plotter.hpp  plotter_ros.cpp  plotter_ros.hpp  pose_estimator.cpp  pose_estimator.hpp  pose_estimator_ros.cpp  pose_estimator_ros.hpp  reproject_keypoints.cpp  reproject_keypoints.hpp  reproject_keypoints_ros.cpp  reproject_keypoints_ros.hpp
softdrone_target_pose_estimator/include/target_tracking/: rbt.cpp  rbt.hpp  tracker.cpp  tracker.hpp  tracker_ros.cpp
softdrone_target_pose_estimator/keypoint_server/: setup.py
softdrone_target_pose_estimator/keypoint_server/keypointserver/: keypoint_helpers.py
softdrone_target_pose_estimator/launch/: estimate_target_pose.launch  keypoint_detector.launch  plotter.launch  pose_estimator.launch  reproject_keypoints.launch  tracker.launch
softdrone_target_pose_estimator/models/: cardboard_box_cad.csv  cardboard_box_model.pth  cardboard_box_pose.json  medkit_cad.csv  medkit_model.pth  pepsi_bottle_cad.csv  pepsi_bottle_model.pth  racecar_cad.csv  racecar_model.pth
softdrone_target_pose_estimator/msg/: Keypoint.msg  Keypoint2D.msg  Keypoint3D.msg  Keypoints.msg  Keypoints2D.msg  Keypoints3D.msg
softdrone_target_pose_estimator/notebooks/: keypoint_evaluation.py  notebook_helpers.py  optimize_model.py  pose_estimation.py  racecar_metrics.json  trt_pose_estimation.py
softdrone_target_pose_estimator/rviz/: dummy_tracker.rviz
softdrone_target_pose_estimator/src/: controller_node.py  image_processing.py  keypoint_client.py  keypoint_detector_node.cpp  keypoint_detector_node_old.cpp  keypoint_detector_node_trt.py  keypoint_server.py  plotter_node.cpp  pose_detection.py  pose_estimator_node.cpp  pub_hz_test.py  reproject_keypoints_node.cpp  target_pose.json  tracker_node.cpp
softdrone_target_pose_estimator/tests/: test_keypoint_detector.cpp
softdrone_target_tracking/: CMakeLists.txt  README.md  package.xml
softdrone_target_tracking/config/: default_params.yaml  dummy_tracker_params.yaml
softdrone_target_tracking/launch/: dummy_tracker.launch  tracker.launch
softdrone_target_tracking/src/: dummy_node.cpp  tracker.cpp  tracker_node.cpp  tracker_ros.cpp
softdrone_target_tracking/tests/: test_rbt.cpp
(+142 files in other folders)
