<?xml version="1.0"?>
<package format="2">
  <name>softdrone_core</name>
  <version>0.0.0</version>
  <description>Core Softdrone control code</description>

  <maintainer email="aaronray@mit.edu">Aaron Ray</maintainer>
  <license>TODO</license>
  <author email="na26933@mit.edu">Nathan Hughes</author>
  <author email="aaronray@mit.edu">Aaron Ray</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>softdrone_target_tracking</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>
  </export>
</package>
